syntax = "proto3";

option csharp_namespace = "Discount.gRPC";

package discount;

service DiscountProtoService {
  rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
  rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
  rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
  rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteResponse);
}

message GetDiscountRequest {
  string productName = 1;
}

message CouponModel 
{
  string productName = 1;
  string description = 2;
  int32 amount = 3;
}
message CreateDiscountRequest {
  CouponModel Coupon = 1;
}
message UpdateDiscountRequest {
  CouponModel Coupon = 1;
}
message DeleteDiscountRequest {
  string productName = 1;
}
message DeleteResponse {
  bool isSuccess = 1;
}